--- a/package.json
+++ b/package.json
@@ -17,9 +17,9 @@
   },
   "homepage": "https://github.com/danglayers/Express-Burger-Logger#readme",
   "dependencies": {
-    "body-parser": "^1.19.0",
     "express": "^4.17.1",
     "express-handlebars": "^5.1.0",
+    "express-router": "0.0.1",
     "mysql": "^2.18.1"
   }
 }
